cargo_check_final.txt
    Checking machine v0.1.0 (/home/feroan/Projects/theMachine/machine)
error[E0432]: unresolved imports `sysinfo::SystemExt`, `sysinfo::CpuExt`
 --> src/core/analysis.rs:1:23
  |
1 | use sysinfo::{System, SystemExt, CpuExt};
  |                       ^^^^^^^^^  ^^^^^^ no `CpuExt` in the root
  |                       |
  |                       no `SystemExt` in the root
  |
help: a similar name exists in the module
  |
1 - use sysinfo::{System, SystemExt, CpuExt};
1 + use sysinfo::{System, System, CpuExt};
  |

error[E0432]: unresolved imports `sysinfo::SystemExt`, `sysinfo::ProcessExt`, `sysinfo::CpuExt`
 --> src/core/proc.rs:1:23
  |
1 | ...tem, SystemExt, ProcessExt, CpuExt};
  |         ^^^^^^^^^  ^^^^^^^^^^  ^^^^^^ no `CpuExt` in the root
  |         |          |
  |         |          no `ProcessExt` in the root
  |         no `SystemExt` in the root
  |
help: a similar name exists in the module
  |
1 - use sysinfo::{System, SystemExt, ProcessExt, CpuExt};
1 + use sysinfo::{System, System, ProcessExt, CpuExt};
  |
help: a similar name exists in the module
  |
1 - use sysinfo::{System, SystemExt, ProcessExt, CpuExt};
1 + use sysinfo::{System, SystemExt, Process, CpuExt};
  |

warning: unused import: `Severity`
 --> src/commands/investigate.rs:3:42
  |
3 | ...dations::{self, Severity};
  |                    ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0716]: temporary value dropped while borrowed
  --> src/commands/trace.rs:26:17
   |
26 | ...   "└── ".bright_black().to_string().as_str()
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---------
   |       |                                        |
   |       |                                        temporary value is freed at the end of this statement
   |       creates a temporary value which is freed while still in use
   |       borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

warning: variable does not need to be mutable
  --> src/commands/investigate.rs:13:9
   |
13 |     let mut issues = recommendations::get_r...
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `uptime` found for struct `sysinfo::System` in the current scope
  --> src/core/analysis.rs:39:31
   |
39 |         let uptime = self.sys.uptime();
   |                               ^^^^^^ this is an associated function, not a method
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
   = note: the candidate is defined in an impl for the type `sysinfo::System`
help: use associated function syntax instead
   |
39 -         let uptime = self.sys.uptime();
39 +         let uptime = sysinfo::System::uptime();
   |

error[E0599]: no method named `load_average` found for struct `sysinfo::System` in the current scope
  --> src/core/analysis.rs:40:29
   |
40 |         let load = self.sys.load_average();
   |                             ^^^^^^^^^^^^ this is an associated function, not a method
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
   = note: the candidate is defined in an impl for the type `sysinfo::System`
help: use associated function syntax instead
   |
40 -         let load = self.sys.load_average();
40 +         let load = sysinfo::System::load_average();
   |

error[E0599]: no method named `host_name` found for struct `sysinfo::System` in the current scope
  --> src/core/analysis.rs:48:32
   |
48 | ...me: self.sys.host_name().unwrap_or_else(...
   |                 ^^^^^^^^^ this is an associated function, not a method
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
   = note: the candidate is defined in an impl for the type `sysinfo::System`
help: use associated function syntax instead
   |
48 -             hostname: self.sys.host_name().unwrap_or_else(|| "unknown".to_string()),
48 +             hostname: sysinfo::System::host_name().unwrap_or_else(|| "unknown".to_string()),
   |

error[E0599]: no method named `kernel_version` found for struct `sysinfo::System` in the current scope
  --> src/core/analysis.rs:49:30
   |
49 | ...: self.sys.kernel_version().unwrap_or_el...
   |               ^^^^^^^^^^^^^^ this is an associated function, not a method
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
   = note: the candidate is defined in an impl for the type `sysinfo::System`
help: use associated function syntax instead
   |
49 -             kernel: self.sys.kernel_version().unwrap_or_else(|| "unknown".to_string()),
49 +             kernel: sysinfo::System::kernel_version().unwrap_or_else(|| "unknown".to_string()),
   |

error[E0599]: no method named `long_os_version` found for struct `sysinfo::System` in the current scope
  --> src/core/analysis.rs:50:26
   |
50 | ...self.sys.long_os_version().unwrap_or_els...
   |             ^^^^^^^^^^^^^^^ this is an associated function, not a method
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
   = note: the candidate is defined in an impl for the type `sysinfo::System`
help: use associated function syntax instead
   |
50 -             os: self.sys.long_os_version().unwrap_or_else(|| "unknown".to_string()),
50 +             os: sysinfo::System::long_os_version().unwrap_or_else(|| "unknown".to_string()),
   |

warning: unused variable: `prefix`
  --> src/commands/trace.rs:23:17
   |
23 |             let prefix = if i == 0 {
   |                 ^^^^^^ help: if this is intentional, prefix it with an underscore: `_prefix`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0432, E0599, E0716.
For more information about an error, try `rustc --explain E0432`.
warning: `machine` (lib) generated 3 warnings
error: could not compile `machine` (lib) due to 8 previous errors; 3 warnings emitted
